--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    
 }
 
 .squares {
@@ -8,16 +9,14 @@
 }
 
 .square {
-    height: 35px;
-    width: 35px;
+    min-height: 16.5px;
+    min-width: 16.5px;
     border: 1px solid black;
     margin-bottom: 1px;
     margin-right: 1px;
     margin-left: 1px;
 }
 
-.square:nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
+.button {
+    margin: 1px;
 }
